# EDVoice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-single-platform.yml
assets/: CMakeLists.txt  default.json  edvoice.rc
assets/voicepack/: Bean.json  LICENCE.txt  config.json
assets/voicepack/ALTA/: ALTA.json  config.json
assets/voicepack/Aria/: Aria.json
assets/voicepack/Bean/: Bean.json
assets/voicepack/[FR] Anne/: [FR] Anne.json
assets/voicepack/[FR] Aria/: [FR] Aria.json
cmake/: config.h.in
plugins/: CMakeLists.txt
plugins/include/: PluginInterface.h
plugins/logger/: CMakeLists.txt  EventLogger.cpp  EventLogger.h
plugins/voicepack/: AtomicQueue.hpp  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Enum.h  VoicePack.cpp  VoicePack.h
src/: AudioPlayer.h  CMakeLists.txt  EDVoiceApp.cpp  EDVoiceApp.h  EliteFileUtil.cpp  EliteFileUtil.h  EventLogger.cpp  EventLogger.h  JournalEvent.h  JournalWatcher.cpp  JournalWatcher.h  StatusEvent.h  StatusWatcher.cpp  StatusWatcher.h  VoicePack.cpp  VoicePack.h  main.cpp
src/GUI/: EDVoiceGUI.cpp  EDVoiceGUI.h  WindowSystem.cpp  WindowSystem.h  inter.cpp  roboto.cpp
src/GUI/DX11/: DX11Adapter.cpp  DX11Adapter.h
src/GUI/Vulkan/: Swapchain.cpp  Swapchain.h  VkAdapter.cpp  VkAdapter.h  VkUtil.cpp  VkUtil.h
src/GUI/Window/: Window.cpp  Window.h  WindowBorderless.cpp  WindowBorderless.h  WindowMain.cpp  WindowMain.h  WindowOverlay.cpp  WindowOverlay.h  WindowSystem.cpp  WindowSystem.h  inter.cpp
src/util/: EliteFileUtil.cpp  EliteFileUtil.h
src/voicepack/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Enum.cpp  Enum.h  MedicComlpiant.h  MedicCompliant.cpp  VoiceLine.cpp  VoiceLine.h  VoicePack.cpp  VoicePack.h  VoicePackManager.cpp  VoicePackManager.h  VoicePackUtil.cpp  VoicePackUtil.h
src/watchers/: JournalWatcher.cpp  JournalWatcher.h  StatusEvent.h  StatusWatcher.cpp  StatusWatcher.h
