cmake_minimum_required(VERSION 3.10)

project(EDVoice)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED On)

include(GNUInstallDirs)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}/plugins)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})

set(CPACK_PACKAGE_NAME "EDVoice")
set(CPACK_PACKAGE_VENDOR "Siegfried Origin")
set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
set(CPACK_GENERATOR "ZIP")

execute_process(
    COMMAND git describe --tags --abbrev=0
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_TAG
    OUTPUT_STRIP_TRAILING_WHITESPACE
)
if(GIT_TAG)
    set(CPACK_PACKAGE_VERSION "${GIT_TAG}")
else()
    set(CPACK_PACKAGE_VERSION "0.0.0")
endif()

include(CPack)

add_subdirectory(assets)
add_subdirectory(plugins)
add_subdirectory(src)
